Stop about page text overlapping navbar

--- a/resources/assets/sass/pages/_about.scss
+++ b/resources/assets/sass/pages/_about.scss
@@ -7,6 +7,7 @@
         background: linear-gradient(to right, transparent 42%, rgba(0, 0, 0, 0.7) 53%, rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 0.9) 85%, rgba(0, 0, 0, 1) 95%);
     }
     .text {
+        padding-top: 31px;
         max-width: 700px;
         max-height: 100%;
         color: white;
@@ -21,5 +22,10 @@
             font-size: 60px;
             margin-bottom: 30px;
         }
+    }
+    .scrollbar-container {
+        //To stop text overlapping the navbar
+        top: 37px;
+        height: calc(100% - 37px);
     }
 }
